data/derived/sp14/progs/unify/prog0689.ml.out
Characters 22-27:
  let _ = "a" :: "b" :: ["c"] :: ["d"];;
                        ^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
